--- a/_posts/2014-09-03-rock-on.markdown
+++ b/_posts/2014-09-03-rock-on.markdown
@@ -11,7 +11,7 @@ Thanks to [Rockalily Cuts](http://www.rockalily.com/) for my amazing 1940's pinu
 
 ![Victory Rolls](https://raw.githubusercontent.com/raphaelleheaf/nevercinderella/gh-pages/_assets/victory-rolls.jpg)
 
-Lipstick from Kevyn Aucoin in Eternal & Laura Mercier lip liner in True Red all from [SpaceNK](http://uk.spacenk.com/women/?cm_mmc=Google+UK-_-F3D+-+Brand+-+Misspells-_-F3D+-+Brand+-+Misspells-_-spacenk-exact&gclid=CMrftt3Fx8ACFVGWtAodOzQACA)
+Lipstick from **Kevyn Aucoin** in *Eternal* & **Laura Mercier** lip liner in *True Red* all from [SpaceNK](http://uk.spacenk.com/women/?cm_mmc=Google+UK-_-F3D+-+Brand+-+Misspells-_-F3D+-+Brand+-+Misspells-_-spacenk-exact&gclid=CMrftt3Fx8ACFVGWtAodOzQACA)
 
 Keep in touch by following me on [Twitter](https://twitter.com/cinderellanever) 
 
